fix: fix background alignment in buttons

--- a/styles/source/base/_form-elements.scss
+++ b/styles/source/base/_form-elements.scss
@@ -71,7 +71,6 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-  background-clip: padding-box;
   background-color: $mvl-color__brand-2--darker;
   background-image: linear-gradient(
     to bottom,
